<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDos" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnDos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDos" />

        <Button
            android:id="@+id/btnDatosDos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDatosDos" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDatosDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSinDatos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>