<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvUno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUno" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUno" />

        <Button
            android:id="@+id/btnDatosUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDatosUno" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDatosUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSinDatos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>